methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:3: error: not found: value doite
  doite()
  ^